<resources>
    <string name="app_name">IPCD</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Log in</string>
    <string name="name_hospital">Name  Hospital</string>
    <string name="enter_url">Enter URL</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="todo">TODO</string>
    <string name="label_prof_type">Who are you?</string>
    <string name="label_doctor">Doctor</string>
    <string name="label_nurse">Nurse</string>
    <string name="label_worker">Worker</string>
    <string name="label_select_from_below">Select from below:</string>
    <string name="action_save">Save</string>
    <string name="action_show_data">Show Data</string>
    <string name="value_statistics_count">There are %1$d Doctors reports, %2$d Nurses reports, and %3$d Workers reports</string>
    <string name="message_saved_success">Saved Success</string>
    <string name="label_start_date">Start Date</string>
    <string name="label_end_date">End Date</string>
    <string name="button_print_report">Print Report</string>
    <string name="doctors">Doctors</string>
    <string name="nurses">Nurses</string>
    <string name="workers">Workers</string>
    <string name="general_answer_counter">General Answer Counter :</string>
    <string name="bef_pat">bef-pat</string>
    <string name="bef_asept">bef-asept</string>
    <string name="aft_b_f">aft-b-f</string>
    <string name="aft_pat">aft-pat</string>
    <string name="aft_p_surr">aft-p-surr</string>
    <string name="hr">HR</string>
    <string name="hw">HW</string>
    <string name="missed">Missed</string>
    <string name="value_statistics_counter"> * There are %1$d HR chooses, %2$d HW chooses, and %3$d Missed chooses </string>
    <string name="value_answer_total_count">%1$s total number %2$d</string>
    <string name="value_doctors_count">%1$d filled by Doctors = %2$s%%</string>
    <string name="value_nurses_count">%1$d filled by Nurses = %2$s%%</string>
    <string name="value_workers_count">%1$d filled by Workers = %2$s%%</string>
    <string name="value_of_equation_of_HR">HR = %1$s%%</string>
    <string name="nav_item_statistics">Statistics</string>
    <string name="nav_item_reports">Reports</string>
    <string name="nav_item_home">Home</string>
    <string name="action_logout">Logout\n</string>
    <string name="action_print_data">Print Data</string>

    <string name="value_hr_percentage">     -* %1$d  HR , HR percentage = (%2$s%%)</string>
    <string name="value_hw_percentage">     -* %1$d  HW   , HW percentage = (%2$s%%)</string>
    <string name="value_combined_percentage">      -* %1$d  HR+HW  , HR + HW percentage = (%2$s%%)</string>

</resources>